--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -191,8 +191,10 @@
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="d3dUtil.cpp" />
     <ClCompile Include="DepthBufferRT.cpp" />
+    <ClCompile Include="DynamicConstant.cpp" />
     <ClCompile Include="ECS\EcsSystem.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="LayoutCodex.cpp" />
     <ClCompile Include="PBRScene.cpp" />
     <ClCompile Include="PlaneMirror.cpp" />
     <ClCompile Include="Light.cpp" />
@@ -239,6 +241,7 @@
     <ClCompile Include="StringHelper.cpp" />
     <ClCompile Include="Surface.cpp" />
     <ClCompile Include="TestCube.cpp" />
+    <ClCompile Include="TestDCB.cpp" />
     <ClCompile Include="TestPlane.cpp" />
     <ClCompile Include="Tex2D.cpp" />
     <ClCompile Include="Texture.cpp" />
@@ -265,9 +268,12 @@
     <ClInclude Include="CerTest.h" />
     <ClInclude Include="Common.hpp" />
     <ClInclude Include="Component.h" />
+    <ClInclude Include="ConstantBuffersEx.h" />
     <ClInclude Include="d3dUtil.h" />
     <ClInclude Include="DepthBufferRT.h" />
+    <ClInclude Include="DynamicConstant.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="LayoutCodex.h" />
     <ClInclude Include="LightCommon.h" />
     <ClInclude Include="PBRScene.h" />
     <ClInclude Include="PlaneMirror.h" />
@@ -285,6 +291,7 @@
     <ClInclude Include="ShapesScene.h" />
     <ClInclude Include="SkyRender.h" />
     <ClInclude Include="Surface.h" />
+    <ClInclude Include="TestDCB.h" />
     <ClInclude Include="Tex2D.h" />
     <ClInclude Include="TexturePreprocessor.h" />
     <ClInclude Include="ViewPoint.h" />
@@ -405,6 +412,16 @@
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Shader\PhongPS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
     <FxCompile Include="Shader\PhongPSNormalMap.hlsl">
