make mesh  dispatch

--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -193,8 +193,15 @@
     <ClCompile Include="DepthBufferRT.cpp" />
     <ClCompile Include="DynamicConstant.cpp" />
     <ClCompile Include="ECS\EcsSystem.cpp" />
+    <ClCompile Include="FrameCommander.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Job.cpp" />
     <ClCompile Include="LayoutCodex.cpp" />
+    <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Model.cpp" />
+    <ClCompile Include="ModelException.cpp" />
+    <ClCompile Include="Node.cpp" />
+    <ClCompile Include="Pass.cpp" />
     <ClCompile Include="PBRScene.cpp" />
     <ClCompile Include="PlaneMirror.cpp" />
     <ClCompile Include="Light.cpp" />
@@ -226,7 +233,6 @@
     <ClCompile Include="IndexBuffer.cpp" />
     <ClCompile Include="InputLayout.cpp" />
     <ClCompile Include="Keyboard.cpp" />
-    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="ModelScene.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="PhysicScene.cpp" />
@@ -238,8 +244,10 @@
     <ClCompile Include="ShapesScene.cpp" />
     <ClCompile Include="SkyRender.cpp" />
     <ClCompile Include="SolidSphere.cpp" />
+    <ClCompile Include="Step.cpp" />
     <ClCompile Include="StringHelper.cpp" />
     <ClCompile Include="Surface.cpp" />
+    <ClCompile Include="Technique.cpp" />
     <ClCompile Include="TestCube.cpp" />
     <ClCompile Include="TestDCB.cpp" />
     <ClCompile Include="TestPlane.cpp" />
@@ -272,9 +280,17 @@
     <ClInclude Include="d3dUtil.h" />
     <ClInclude Include="DepthBufferRT.h" />
     <ClInclude Include="DynamicConstant.h" />
+    <ClInclude Include="FrameCommander.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Job.h" />
     <ClInclude Include="LayoutCodex.h" />
     <ClInclude Include="LightCommon.h" />
+    <ClInclude Include="Material.h" />
+    <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Model.h" />
+    <ClInclude Include="ModelException.h" />
+    <ClInclude Include="Node.h" />
+    <ClInclude Include="Pass.h" />
     <ClInclude Include="PBRScene.h" />
     <ClInclude Include="PlaneMirror.h" />
     <ClInclude Include="Rasterizer.h" />
@@ -290,7 +306,9 @@
     <ClInclude Include="Shadow.h" />
     <ClInclude Include="ShapesScene.h" />
     <ClInclude Include="SkyRender.h" />
+    <ClInclude Include="Step.h" />
     <ClInclude Include="Surface.h" />
+    <ClInclude Include="Technique.h" />
     <ClInclude Include="TestDCB.h" />
     <ClInclude Include="Tex2D.h" />
     <ClInclude Include="TexturePreprocessor.h" />
@@ -332,7 +350,6 @@
     <ClInclude Include="InputLayout.h" />
     <ClInclude Include="IntersectData.h" />
     <ClInclude Include="Keyboard.h" />
-    <ClInclude Include="Mesh.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="PhysicsObject.h" />
     <ClInclude Include="PhysicScene.h" />
